# qaudiocontrol

./: .gitignore  CMakeLists.txt  Mixer.pro  README.md  dbus_types.h  device_proxy.cpp  device_proxy.h  deviceview.cpp  deviceview.h  deviceview.ui  main.cpp  mixer.cpp  mixer.h  mixer.h.moccet  mixer.ui  org.PulseAudio.Core1.Device.xml  org.PulseAudio.Core1.Sink.xml  paproxy.cpp  paproxy.h  qaudiocontrol.pro  test.ui
